<resources>

    <string name="school_mana">School Manager</string>
    <string name="thebest">The best School </string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_hav">Already have an account? Sign in</string>
    <string name="don_t_have_">Dont have an account? Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dashboard">Dashboard</string>
    <string name="manager_nam">Manager Name</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="class_str">Class</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="finance">Finance</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile :</string>
    <string name="total">Total</string>
    <string name="add">+</string>
    <string name="studentName">Studnt Name</string>
    <string name="classes_str">Classes</string>
    <string name="myprofile">MyProfile</string>
    <string name="id_number">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profs">Teachers</string>
    <string name="Name">name</string>
    <string name="phone">xx.xx.xx.xx</string>
    <string name="username">Username</string>
    <string name="user">User</string>
    <string name="setting">Setting</string>
    <string name="permissions">Permissions</string>
    <string name="subject">Subject</string>
    <string name="subject_id">subject id</string>
    <string name="enrollment">Enrollment</string>
</resources>